fix: align items for review inner

--- a/wp-content/themes/mebli/assets/scss/_products.scss
+++ b/wp-content/themes/mebli/assets/scss/_products.scss
@@ -31,6 +31,7 @@
   &-inner {
     display:         flex;
     justify-content: space-between;
+    align-items: center;
     .review-slider {
       position:        relative;
       padding:         0 6.21%;
